--- a/src/assets/css/work.scss
+++ b/src/assets/css/work.scss
@@ -41,6 +41,7 @@
         flex-shrink: 0;
     }
     &__sound {
+        cursor: pointer;
         width: 32px;
         height: 32px;
         background: url(../img/volume.png) no-repeat;
